--- a/landing.html
+++ b/landing.html
@@ -243,152 +243,55 @@
                                     
                                     <div class="row">
                                                 <div class="col-lg-4 col-sm-12"> 
-                                                    <img src="assets/image/iconos/user.png" /> 
-                                                    <p style="font-size: 27px;">Andrés Sarmiento</p>                                                    
+                                                    <img src="assets/image/iconos/user.png" id="icono-testimonial"/> 
+                                                    <p style="text-align: center;" id="persona-testimonial">Andrés Sarmiento</p>                                                    
                                                     <p>
-                                                        Lorem Ipsum is simply dummy text of the 
-                                                        printing and typesetting industry. 
-                                                        Lorem Ipsum has been the industry's 
-                                                        standard dummy text ever since the 1500s, 
-                                                        when an unknown printer took a galley of 
-                                                        type and scrambled it to make a type specimen book. 
-                                                        It has survived not only five centuries
+                                                        Me hice las carillas hace 1 año y medio y estoy super contanta, 
+                                                        no he notado nada, es como si fuese mi propio diente y lo recomiendo 
+                                                        al 100% y ahora sonrio mucho más.
                                                     </p>                                                      
                                                 </div>
                                                 <div class="col-lg-4 col-sm-12">
-                                                    <img src="assets/image/iconos/user.png" />     
-                                                    <p style="font-size: 27px;">Luisa Cedeño</p>         
+                                                    <img src="assets/image/iconos/user.png"id="icono-testimonial"/>     
+                                                    <p style="text-align: center;" id="persona-testimonial">Luisa Cedeño</p>         
                                                     <p>
-                                                        Lorem Ipsum is simply dummy text of the 
-                                                        printing and typesetting industry. 
-                                                        Lorem Ipsum has been the industry's 
-                                                        standard dummy text ever since the 1500s, 
-                                                        when an unknown printer took a galley of 
-                                                        type and scrambled it to make a type specimen book. 
-                                                        It has survived not only five centuries
+                                                        Me recomendaron realizarme las carillas e.max en Quiroga Dental Art 
+                                                        ya que duran más que las resinas, son más estéticas. La Dra me dió mucha confianza. 
+                                                        Tomé la mejor decisión y estoy sumamente contenta.
                                                     </p>    
                                                 </div>
                                                 <div class="col-lg-4 col-sm-12">
-                                                    <img src="assets/image/iconos/user.png" />   
-                                                    <p style="font-size: 27px;">César Palacios</p>            
+                                                    <img src="assets/image/iconos/user.png" id="icono-testimonial"/>   
+                                                    <p style="text-align: center;" id="persona-testimonial">César Palacios</p>            
                                                     <p>
-                                                        Lorem Ipsum is simply dummy text of the 
-                                                        printing and typesetting industry. 
-                                                        Lorem Ipsum has been the industry's 
-                                                        standard dummy text ever since the 1500s, 
-                                                        when an unknown printer took a galley of 
-                                                        type and scrambled it to make a type specimen book. 
-                                                        It has survived not only five centuries
+                                                        Antes sonreia, pero la verdad ahora sonrio  mucho más, el color es igual al primer día, 
+                                                        me subió el autoestima y tengo más confianza en mi misma y deseas que todo el mundo te 
+                                                        vea los dientes al sonreir.
                                                     </p>    
                                                 </div>
                                     </div>
                            
                                 </section>
-                                <!--/our-team-->
+                                <!-- GARANTIA -->
                                 <section class="fl-row portfolio">
                                     <div class="container">
-                                        <div class="row">
-                                            <div class="themesflat-spacer clearfix" data-desktop="120" data-mobile="60" data-smobile="50"></div>
-                                        </div>
-                                        <div class="row">
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-                                               <div class="wrap-portfolio  wow fadeInDown">
-                                                    <h3 class="heading">
-                                                        PORTAFOLIO
-                                                    </h3>
-                                                    <div class="title-heading text-color-title-sidebar">
-                                                        Casos de &Eacute;xito
-                                                    </div>
-                                                    <p class="text-color-title-sidebar">Nuestros casos de exito no suman decenas, sino centenas de sonrisas felices.</p>
-                                               </div>
+                                        <div class="row" id="seccion-garantia">
+                                            <div class="col-lg-6 col-md-6 col-sm-12">
+                                                <img src="assets/image/iconos/garantia.png" id="sello-garantia"/>                                               
                                             </div>
-
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-                                               <div class="box-portfolio wow fadeInUp pdbt-30">
-                                                    <img src="assets/image/common/caso-1.webp" alt="image">
-                                                    <!-- <div class="overlay active ">
-                                                        <h4 class="text-color-title-sidebar">
-                                                            <a href="services.html">
-                                                                Maximus libero ornare
-                                                            </a>
-                                                        </h4>
-                                                        <p class="text-color-title-sidebar">
-                                                            Nec vehicula
-                                                        </p>
-                                                    </div> -->
-                                               </div>
+                                            <div class="col-lg-6 col-md-6 col-sm-12" id="texto-garantia">
+                                                <h3>GARANTIA DE 10 AÑOS</h3>
+                                                <p>Dependiendo del material utilizado, sea este: Carillas de resina con
+                                                    particulas de Zirconio o Emax, la durabilidad se puede extender a 15 años,
+                                                    con los chequeos y cuidados adecuados.
+                                                    Recomendamos cuidarse de alimentos de alta dureza o  que desprendan pigmentos,
+                                                    como es el caso del café.
+                                                </p>
                                             </div>
-
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-                                                <div class="box-portfolio wow fadeInUp pdbt-30">
-                                                    <img src="assets/image/common/caso-5.webp" alt="image">
-                                                    <!-- <div class="overlay">
-                                                        <h4 class="text-color-title-sidebar">
-                                                            <a href="services.html">
-                                                                Maximus libero ornare
-                                                            </a>
-                                                        </h4>
-                                                        <p class="text-color-title-sidebar">
-                                                            Nec vehicula
-                                                        </p>
-                                                    </div> -->
-                                               </div>
-                                            </div>
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-                                                <div class="box-portfolio wow fadeInUp pdbt-30" data-wow-delay="200ms">
-                                                    <img src="assets/image/common/caso-3.webp" alt="image">
-                                                    <!-- <div class="overlay">
-                                                        <h4 class="text-color-title-sidebar">
-                                                            <a href="services.html">
-                                                                Maximus libero ornare
-                                                            </a>
-                                                        </h4>
-                                                        <p class="text-color-title-sidebar">
-                                                            Nec vehicula
-                                                        </p>
-                                                    </div> -->
-                                                </div>
-                                            </div>
-
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12">
-                                                <div class="box-portfolio wow fadeInUp pdbt-30" data-wow-delay="200ms">
-                                                    <img src="assets/image/common/caso-4.webp" alt="image">
-                                                    <!-- <div class="overlay">
-                                                        <h4 class="text-color-title-sidebar">
-                                                            <a href="services.html">
-                                                                Maximus libero ornare
-                                                            </a>
-                                                        </h4>
-                                                        <p class="text-color-title-sidebar">
-                                                            Nec vehicula
-                                                        </p>
-                                                    </div> -->
-                                                </div>
-                                            </div>
-
-                                            <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12" >
-                                                <div class="box-portfolio wow fadeInUp pdbt-30" data-wow-delay="400ms">
-                                                    <img src="assets/image/common/caso-2.webp" alt="image">
-                                                    <!-- <div class="overlay">
-                                                        <h4 class="text-color-title-sidebar">
-                                                            <a href="services.html">
-                                                                Maximus libero ornare
-                                                            </a>
-                                                        </h4>
-                                                        <p class="text-color-title-sidebar">
-                                                            Nec vehicula
-                                                        </p>
-                                                    </div> -->
-                                                </div>
-                                            </div>
-
-                                        </div>
-                                        <div class="row">
-                                            <div class="themesflat-spacer clearfix" data-desktop="90" data-mobile="40" data-smobile="20"></div>
                                         </div>
                                     </div>
                                 </section>
-                                <!--/portfolio-->
+                                <!-- /GARANTIA -->
                                 <section class="fl-row counter">
                                     <div class="container">
                                         <div class="row">
